text extraction changes